--- a/src/app/projects/Pro.css
+++ b/src/app/projects/Pro.css
@@ -8,7 +8,7 @@
 
 .main-project {
     color: black;
-    background-color: var(--color2);
+    /* background-color: var(--color2); */
     border-radius: 40px;
     margin-top: 7rem;
 }
@@ -68,4 +68,7 @@
 
 .tech-pill {
     background-color: var(--color4);
+}
+.card{
+    background-color: rgb(6, 14, 19);
 }
